--- a/Project.toml
+++ b/Project.toml
@@ -3,13 +3,24 @@ uuid = "76e01b6b-c995-4ce6-8559-91e72a3d4e95"
 version = "0.3.1"
 authors = ["Ruben Gonzalez <ruben.carbonbased@gmail.com> and contributors"]
 
+[workspace]
+projects = ["docs"]
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [weakdeps]
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [extensions]
 FlexUnitfulExt = "Unitful"
+ForwardDiffExt = "ForwardDiff"
 
 [compat]
+LinearAlgebra = "1.12.0"
+StaticArrays = "1.9.16"
 Test = "1.10"
 Unitful = "1.27.0"
 julia = "1.10"
@@ -19,6 +30,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[workspace]
-projects = ["docs"]
