--- a/Project.toml
+++ b/Project.toml
@@ -7,18 +7,20 @@ authors = ["Ruben Gonzalez <ruben.carbonbased@gmail.com> and contributors"]
 projects = ["docs"]
 
 [deps]
+ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [weakdeps]
-Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extensions]
 FlexUnitfulExt = "Unitful"
 ForwardDiffExt = "ForwardDiff"
 
 [compat]
+ArrayInterface = "7.22.0"
 LinearAlgebra = "1.12.0"
 StaticArrays = "1.9.16"
 Test = "1.10"
