--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ FlexUnitfulExt = "Unitful"
 ForwardDiffExt = "ForwardDiff"
 
 [compat]
+ForwardDiff = "1.3"
 ArrayInterface = "7.22.0"
 LinearAlgebra = "1.12.0"
 StaticArrays = "1.9.16"
