--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,8 +24,9 @@ jobs:
       matrix:
         version:
           - '1.10'
+          - '1.11'
           - '1.12'
-          - 'pre'
+          #- 'pre'
         os:
           - ubuntu-latest
         arch:
