--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FlexUnits = "76e01b6b-c995-4ce6-8559-91e72a3d4e95"
+
+[compat]
+Documenter = "1.16"
