--- a/Project.toml
+++ b/Project.toml
@@ -37,3 +37,6 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
+
+[sources]
+NestedNumbers = {url = "https://github.com/JuliaMath/NestedNumbers.jl"}
