--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,3 +4,9 @@ FlexUnits = "76e01b6b-c995-4ce6-8559-91e72a3d4e95"
 
 [compat]
 Documenter = "1.16"
+
+[extras]
+NestedNumbers = "1f6363f3-4ba7-41a3-bcac-d685ef427933"
+
+[sources]
+NestedNumbers = {url = "https://github.com/JuliaMath/NestedNumbers.jl"}
